add message for validation error

--- a/simple-shop-api/src/main/resources/messages.properties
+++ b/simple-shop-api/src/main/resources/messages.properties
@@ -4,3 +4,4 @@ api.success.edit=Berhasil mengedit {0} dengan id {1}
 api.success.delete=Berhasil menghapus {0} dengan id {1}
 api.success.load=Berhasil memuat data {0}
 api.error.not-found=Tidak ditemukan {0} dengan id {1}
+api.error.validation=Input tidak valid!
